fix support section on mobile

--- a/src/assets/scss/components/buttons.scss
+++ b/src/assets/scss/components/buttons.scss
@@ -16,3 +16,15 @@
   color: $primary;
   font-size: 18px;
 }
+
+.btn-50 {
+  width: 50%;
+}
+
+.btn-75 {
+  width: 75%;
+}
+
+.btn-100 {
+  width: 100%;
+}
